k3s/generated_manifests/forgejo/Deployment-forgejo-runner.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forgejo-runner
  namespace: forgejo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: forgejo-runner
  template:
    metadata:
      labels:
        app: forgejo-runner
    spec:
      automountServiceAccountToken: true
      containers:
        - env:
            - name: DOCKER_TLS_CERTDIR
              value: /certs
          image: docker.io/docker:29.4.0-dind
          name: daemon
          securityContext:
            privileged: true
          volumeMounts:
            - mountPath: /certs
              name: docker-certs
        - args:
            - |
              while ! nc -z localhost 2376 </dev/null ; do
                echo 'waiting for docker daemon...' ;
                sleep 5 ;
                done ;
              forgejo-runner --config config.yml daemon
          command:
            - /bin/bash
            - -c
          image: code.forgejo.org/forgejo/runner:13.1.0
          name: runner
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /certs
              name: docker-certs
            - mountPath: /data
              name: runner-data
            - mountPath: /tmp
              name: tmp
      restartPolicy: Always
      volumes:
        - emptyDir: {}
          name: docker-certs
        - emptyDir: {}
          name: runner-data
        - emptyDir: {}
          name: tmp
