k3s/generated_manifests/forgejo/Pod-forgejo-test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    helm.sh/hook: test
  labels:
    app: forgejo
    app.kubernetes.io/instance: forgejo
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/version: 12.0.4
    helm.sh/chart: forgejo-14.0.4
    version: 12.0.4
  name: forgejo-test-connection
  namespace: forgejo
spec:
  containers:
    - args:
        - forgejo-http:3000
      command:
        - wget
      image: busybox:latest
      name: wget
  restartPolicy: Never
