k3s/generated_manifests/forgejo/Service-forgejo-http.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    app: forgejo
    app.kubernetes.io/instance: forgejo
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/version: 12.0.4
    helm.sh/chart: forgejo-14.0.4
    version: 12.0.4
  name: forgejo-http
  namespace: forgejo
spec:
  ports:
    - name: http
      port: 3000
      targetPort: http
  selector:
    app.kubernetes.io/instance: forgejo
    app.kubernetes.io/name: forgejo
  type: ClusterIP
