k3s/generated_manifests/forgejo/Service-forgejo-tailscale.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: forgejo.doma.lol
    external-dns.alpha.kubernetes.io/target: homelab.boreal-scala.ts.net
  name: forgejo-tailscale
  namespace: forgejo
spec:
  clusterIP: None
  type: ClusterIP
