k3s/generated_manifests/forgejo/Ingress-forgejo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forgejo
  namespace: forgejo
spec:
  ingressClassName: traefik
  rules:
    - host: forgejo.doma.lol
