k3s/generated_manifests/forgejo/IngressRoute-forgejo.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: forgejo
  namespace: forgejo
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`forgejo.doma.lol`)
      services:
        - name: forgejo-http
          port: 3000
